<resources>
    <string name="app_name">Dental Care of Babies</string>
    <string name="action_settings">Settings</string>
    <string name="inicio_bemvindo">Bem-vindo ao aplicativo Dental Care of Babies.</string>
    <string name="inicio_toque_inicial">Toque em \'+\' e realize o cadastro inicial.</string>
    <string name="inicio_toque_inicial_data_imcompleta">Parabéns! Você já realizou o cadastro inicial.
        Aguarde o bebê completar um mês para continuar o acompanhamento</string>
    <string name="inicio_toque_primeiro_mes">Parabéns! Você já realizou o cadastro inicial. Agora
        toque em \'+\' e realize o cadastro do primeiro mês.</string>
    <string name="inicio_aguarde_terceiro_mes">Aguarde para realizar o cadastro do terceiro mês</string>
    <string name="inicio_aguarde_sexto_mes">O cadastro do sexto mês estará disponível em breve...</string>
    <string name="inicio_toque_terceiro_mes">Toque em \'+\' e realize o cadastro do terceiro mês</string>
    <string name="inicio_toque_sexto_mes">Toque em \'+\' e realize o cadastro do sexto mês</string>
    <string name="inicio_aguarde_primeiroAno">Aguarde para fazer o cadastro do 1º ano do bebê</string>
    <string name="cadastro_primeiroAno">O cadastro do primeiro ano está disponível! Toque em \'+\' para realizá-lo. </string>
    <string name="cadastro">Cadastrar</string>
    <string name="title_activity_tela_cadastro1">Cadastro Inicial</string>
    <string name="tela_1_title_message">Identificação do Usuário Responsável pela Criança</string>
    <string name="tela_1_cartao_sus">Número do cartão SUS:</string>
    <string name="tela_1_nome">Nome Completo:</string>
    <string name="tela_1_data">Data de Nascimento:</string>
    <string name="tela_1_radio_genero">Gênero:</string>
    <string name="tela_1_radio_genero_m">Masculino</string>
    <string name="tela_1_radio_genero_f">Feminino</string>
    <string name="tela_1_radiogroup_cor">Raça/Cor:</string>
    <string name="tela_1_radio_cor_b">Branca</string>
    <string name="tela_1_radio_cor_pa">Parda</string>
    <string name="tela_1_radio_cor_pr">Preta</string>
    <string name="tela_1_radio_cor_a">Amarela</string>
    <string name="tela_1_radio_cor_i">Indígena</string>
    <string name="tela_1_cidade">Residente na cidade de:</string>
    <string name="tela_1_telefone">Telefone:</string>
    <string name="tela_1_email">Email:</string>
    <string name="title_activity_tela_cadastro2">Tela Cadastro Inicial</string>
    <string name="tela_2_title_message">Dados do Responsável/Mãe da Criança</string>
    <string name="tela_2_pergunta_curso">Qual o curso mais elevado que frequenta ou frequentou?
    </string>
    <string name="tela_2_radio_fund_i">Ensino Fundamental Incompleto</string>
    <string name="tela_2_radio_fund_c">Ensino Fundamental Completo</string>
    <string name="tela_2_radio_med_i">Ensino Médio Incompleto</string>
    <string name="tela_2_radio_med_c">Ensino Fundamental Completo</string>
    <string name="tela_2_radio_sup_i">Ensino Superior Incompleto</string>
    <string name="tela_2_radio_sup_c">Ensino Fundamental Completo</string>
    <string name="tela_2_pergunta_emprego">Situação no mercado de trabalho:</string>
    <string name="tela_2_radio_emp_e">Empregador</string>
    <string name="tela_2_radio_emp_as_c">Assalariado com carteira de trabalho</string>
    <string name="tela_2_radio_emp_as_s">Assalariado sem carteira de trabalho</string>
    <string name="tela_2_radio_emp_au_c">Autônomo com previdência social</string>
    <string name="tela_2_radio_emp_au_s">Autônomo sem previdencia social</string>
    <string name="tela_2_radio_emp_ap">Aposentada/Pensionista</string>
    <string name="tela_2_radio_emp_d">Desempregada</string>
    <string name="tela_2_radio_emp_n">Não trabalha</string>
    <string name="tela_2_radio_emp_o">Outro</string>
    <string name="tela_3_title_message">Dados do Responsável/Mãe da Criança</string>
    <string name="tela_3_pergunta_saude">Em relação a sua saúde responda:</string>
    <string name="tela_3_saude_f">é fumante?</string>
    <string name="tela_3_saude_a">Faz uso de álcool?</string>
    <string name="tela_3_saude_dr">Faz uso de drogas?</string>
    <string name="tela_3_saude_h">Tem hipertensão arterial?</string>
    <string name="tela_3_saude_di">Tem diabetes?</string>
    <string name="tela_3_saude_avc">Teve AVC/Derrame?</string>
    <string name="tela_4_title_message">Dados do Recém-Nascido</string>
    <string name="tela_4_nome">Nome do recém-nascido</string>
    <string name="tela_4_data">Data de nascimento:</string>
    <string name="tela_4_genero">Sexo da criança:</string>
    <string name="tela_4_gener_m">Masculino</string>
    <string name="tela_4_genero_f">Feminino</string>
    <string name="tela_4_peso">Peso da criança ao nascimento(Kg):</string>
    <string name="tela_4_altura">Altura(cm):</string>
    <string name="tela_4_foto">Foto do Bebê</string>
    <string name="title_activity_tela_cadastro3">TelaCadastro3</string>
    <string name="title_activity_tela_sobre">Sobre</string>
    <string name="title_activity_tela_cadastro4">TelaCadastro4</string>
    <string-array name="array_primeiro_mes_est_civil">
        <item>-Selecione-</item>
        <item>Vive com marido ou companheiro</item>
        <item>Vive sem marido ou companheiro</item>
    </string-array>
    <string-array name="array_onde_conheceu_app">
        <item>-Selecione-</item>
        <item>Cadastramento no HSVP</item>
        <item>Impresso - folder </item>
        <item>Online-redes sociais</item>
        <item>Outro - qual?</item>

    </string-array>
    <string-array name="array_parentesco">
        <item>-Selecione-</item>
        <item>Mãe</item>
        <item>Pai</item>
        <item>Avô/Avó</item>
        <item>Irmã/irmão</item>
        <item>Outro</item>
    </string-array>
    <string-array name="array_primeiromes_renda">
        <item>-Selecione-</item>
        <item>Menor ou igual a 1 salário mínimo</item>
        <item>1 a 3 salários mínimos</item>
        <item>3 a 6 salários mínimos</item>
        <item>6 a 10 salários mínimos</item>
        <item>Maior que 10 salários mínimos</item>
    </string-array>
    <string name="tela_1_primeiro_mes_title">Primeiro mês do bebê</string>
    <string name="tela_1_primeiro_mes_est_civil">Estado Civil Materno:</string>
    <string name="tela_1_primeiro_mes_renda">Renda Familiar:</string>
    <string name="tela_1_primeiro_mes_pre_natal">Consultas pré-natais</string>
    <string name="tela_1_primeiro_mes_peso_atual">Peso atual do bebê</string>
    <string name="tela_1_primeiro_mes_altura_atual">Altura atual do bebê</string>
    <string name="tela_2_primeiro_mes_n_gestacoes">Quantas gestações a mãe teve, incluindo a atual? </string>
    <string name="tela_2_primeiro_mes_n_partos_normais">Quantos partos normais foram realizados? </string>
    <string name="tela_2_primeiro_mes_n_cesaria">Quantas cesárias foram realizadas?</string>
    <string name="tela_2_primeiro_mes_n_aborto">Sofreu algum aborto? Quantos?</string>
    <string name="tela_2_primeiro_mes_tipo_parto">Tipo de parto:</string>
    <string-array name="array_tipoParto">
        <item>-Selecione-</item>
        <item>Vaginal</item>
        <item>Vaginal com fórceps</item>
        <item>Vaginal com vácuo</item>
        <item>Vaginal induzido</item>
        <item>Vaginal induzido com fórceps</item>
        <item>Vaginal com analgesia</item>
        <item>Vaginal com analgesia com fórceps</item>
        <item>Cesariana</item>
    </string-array>
    <string name="tela_3_primeiro_mes_razao_cesaria_pergunta">Qual a razão da cesariana?</string>
    <string-array name="array_cesarea">
        <item>-Selecione-</item>
        <item>Sofrimento fetal</item>
        <item>Desproporção F-P</item>
        <item>Hemorragia materna</item>
        <item>Parada de progressão</item>
        <item>Pré-eclâmpsia</item>
        <item>Eclâmpsia</item>
        <item>Pós-maturidade</item>
        <item>Diabetes materna</item>
        <item>Para ligar trompas</item>
        <item>Repetição</item>
        <item>Morte fetal</item>
        <item>Eletiva</item>
        <item>Outra</item>
        <item>Desconhecida</item>
    </string-array>
    <string name="tela_4_primeiro_mes_razao_ind">Qual a razão da indução?</string>
    <string-array name="array_inducao">
        <item>-Selecione-</item>
        <item>Pós-maturidade</item>
        <item>Pré-eclâmpsia</item>
        <item>Bolsa Rota</item>
        <item>ISO-Imunização RH</item>
        <item>Morte fetal</item>
        <item>Eletiva</item>
        <item>Outra</item>
        <item>Desconhecida</item>
    </string-array>
    <string name="tela_5_primeiro_mes_title">Questionário Perinatal</string>
    <string name="tela_5_primeiro_mes_saude">Condições de saude do bebê:</string>
    <string name="tela_5_primeiro_mes_alimentacao">Alimentação:</string>
    <string name="tela_5_primeiro_mes_dias_hospital">Dias passados no hospital</string>
    <string name="tela_5_primeiro_mes_anormalidade">A criança apresentou alguma anormalidade?
    </string>
    <string-array name="array_saudeBebe">
        <item>-Selecione-</item>
        <item>Sadio</item>
        <item>Doente</item>
        <item>Óbito</item>
    </string-array>
    <string-array name="arrayAlimentacao">
        <item>-Selecione-</item>
        <item>Leite materno exclusivamente</item>
        <item>Leite materno e mamadeira</item>
        <item>Mamadeira exclusivamente</item>
    </string-array>
    <string name="tela_2_terceiro_mes_liq">Quais dos liquidos abaixo o bebê já ingeriu?</string>
    <string name="tela_2_terceiro_mes_liq_acho">Achocolatado</string>
    <string name="tela_2_terceiro_mes_liq_cha">Chá</string>
    <string name="tela_2_terceiro_mes_liq_cafe">Café</string>
    <string name="tela_2_terceiro_mes_liq_suco">Suco</string>
    <string name="tela_2_terceiro_mes_liq_refri">Refrigerante</string>
    <string name="tela_2_terceiro_mes_liq_caldo">Caldo de alimentos</string>
    <string name="tela_2_terceiro_mes_liq_leite_p">Leite em pó</string>
    <string name="tela_2_terceiro_mes_liq_leite_m">Leite materno</string>
    <string name="cadastro_inicial_btn_proximo">Próximo</string>
    <string name="cadastro_inicial_3_titulo">Dados do responsável</string>
    <string name="cadastro_inicial_3_pergunta1">Qual é o seu nível de escolaridade?</string>
    <string name="cadastro_inicial_3_pegunta2">Qual é a sua situação no mercado de trabalho?
    </string>
    <string name="cadastro_inicial_3_pergunta3">Responda com relação à sua saúde:</string>
    <string name="cadastro_inicial_3_fuma">É Fumante?</string>
    <string name="cadastro_inicial_3_alcool">Faz o uso de álcool?</string>
    <string name="cadastro_inicial_3_drogas">Faz o uso de outras drogas?</string>
    <string name="cadastro_inicial_3_hipertensao">Tem hipertensão arterial?</string>
    <string name="cadastro_inicial_3_diabetes">Tem diabetes?</string>
    <string name="cadastro_inicial_3_avc">Já teve um AVC/Derrame?</string>
    <string name="dica_amamenta_1">• O bebê deve estar calmo e acordado;</string>
    <string name="dica_amamenta_2">• A mãe deve estar com as mãos limpas;</string>
    <string name="dica_amamenta_3">• Iniciar pela mama que está mais cheia;</string>
    <string name="dica_amamenta_4">• A cabeça do bebê deve estar alinhada com a coluna e estar o
        mais vertical possível
    </string>
    <string name="dica_amamenta_5">• O bebê deve abocanhar o bico grande parte da aréola</string>
    <string name="dica_amamenta_6">• O lugar ideal para a amamentação é um lugar calmo, sem muita
        luz, barulho e passagem de pessoas;
    </string>
    <string name="dica_amamenta_7">• Deve-se deixar a criança mamar até que largue o seio;</string>
    <string name="dica_amamenta_8">• Após amamentar, colocar o bebê elevado para poder arrotar.
    </string>
    <string name="btnDicas">OK</string>
</resources>