<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">


                    <LinearLayout
                        android:id="@+id/linearLayoutDicas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/balloon"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imagemDicaAmamentando"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/imagem_amament" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Alguns cuidados podem ajudar na hora de amamentar seu filho, aqui vão algumas dicas:"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_1"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_2"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_3"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_4"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_5"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_6"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_7"
                                android:textSize="13.5sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/dica_amamenta_8"
                                android:textSize="13.5sp" />


                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnDicas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="25dp"
                        android:background="#D3E2B6"
                        android:text="@string/btnDicas"
                        android:textColor="#435843"
                        android:textSize="15sp"


                        />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>